--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width">
     <title>Coffee Masters</title>
 
+    <script src="src/app.js" defer type="module"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
@@ -12,13 +14,13 @@
 
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="app.webmanifest">
-    <link rel="apple-touch-icon" href="images/icons/icon.png">
-    <link rel="icon" href="images/icons/icon.png">
+    <link rel="apple-touch-icon" href="src/images/icons/icon.png">
+    <link rel="icon" href="src/images/icons/icon.png">
 </head>
 
 <body>
     <header>
-        <h1><img src="images/logo.svg" width="140" alt="Coffee Masters"></h1>
+        <h1><img src="src/images/logo.svg" width="140" alt="Coffee Masters"></h1>
         <nav>
             <a class="navlink material-symbols-outlined" id="linkHome" href="/">
                     local_cafe
@@ -56,12 +58,15 @@
 
     <template id="order-form-template">
         <form>
-            <label for="name">Your Name</label>
-            <input name="name" required>
-            <label for="phone">Your Phone Number</label>
-            <input name="phone" type="tel">
-            <label for="email">Your Email</label>
-            <input name="email" type="email">
+            <label>
+                <input name="name" required>
+            </label>
+            <label>
+                <input name="phone" type="tel">
+            </label>
+            <label>
+                <input name="email" type="email">
+            </label>
             <button type="submit">Place Order</button>
         </form>
     </template>
